<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickUpSports</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">My Profile</string>

    <!-- Profile Activity -->
    <string name="text_view_name">Name</string>
    <string name="text_view_email">Email</string>
    <string name="text_view_phone_number">Phone Number</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="text_view_tab_friends">My Friends</string>
    <string name="text_view_tab_events">My Events</string>
    <string name="remove">Remove</string>
    <!-- Profile Activity -->


	<!-- Create New Profile Activity -->
	<string name="text_view_first_name">First Name:</string>
	<string name="text_view_last_name">Last Name:</string>
	<string name="text_view_phone_number1">Phone Number:</string>
	<string name="button_accept">Accept</string>
	<!-- Create New Profile Activity -->


    <!-- Create Event Activity -->
    <string name="spinner_sport">Choose a Sport</string>
    <string name="button_date">Set Date</string>
    <string name="button_time">Set Time</string>
    <string name="edit_text_address">Address</string>
    <string name="edit_text_city">City</string>
    <string name="spinner_state">State</string>
    <string name="edit_text_zip">Zip Code</string>
    <string name="button_post">Post</string>
    <string name="button_cancel">Cancel</string>
    <!-- Create Event Activity -->


    <!-- states spinner items -->
    <string name="Alabama">AL</string>
    <string name="Alaska">AK</string>
    <string name="arizona">AZ</string>
    <string name="arkansas">AR</string>
    <string name="california">CA</string>
    <string name="colorado">CO</string>
    <string name="connecticut">CT</string>
    <string name="delaware">DE</string>
    <string name="florida">FL</string>
    <string name="georgia">GA</string>
    <string name="hawaii">HI</string>
    <string name="idaho">ID</string>
    <string name="illinois">IL</string>
    <string name="indiana">IN</string>
    <string name="iowa">IA</string>
    <string name="kansas">KS</string>
    <string name="kentucky">KY</string>
    <string name="louisiana">LA</string>
    <string name="maine">ME</string>
    <string name="maryland">MD</string>
    <string name="massachusetts">MA</string>
    <string name="michigan">MI</string>
    <string name="minnesota">MN</string>
    <string name="mississippi">MS</string>
    <string name="missouri">MO</string>
    <string name="montana">MT</string>
    <string name="nebraska">NE</string>
    <string name="nevada">NV</string>
    <string name="new_hampshire">NH</string>
    <string name="new_jersey">NJ</string>
    <string name="new_mexico">NM</string>
    <string name="new_york">NY</string>
    <string name="north_carolina">NC</string>
    <string name="north_dakota">ND</string>
    <string name="ohio">OH</string>
    <string name="oklahoma">OK</string>
    <string name="oregon">OR</string>
    <string name="pennsylvania">PA</string>
    <string name="rhode_island">RI</string>
    <string name="south_carolina">SC</string>
    <string name="south_dakota">SD</string>
    <string name="tennessee">TN</string>
    <string name="texas">TX</string>
    <string name="utah">UT</string>
    <string name="vermont">VT</string>
    <string name="virginia">VA</string>
    <string name="washington">WA</string>
    <string name="west_virgina">WV</string>
    <string name="wisconsin">WI</string>
    <string name="wyoming">WY</string>
    <!-- states spinner items -->

    <string name="title_activity_search_list">Search for events!</string>
    <string name="set_filters_string">Set Filters</string>
    <string name="change_location_string">Change Location</string>
    <string name="set_radius_string">Set Radius</string>
    <string name="help_string">Help</string>
    <string name="about_message">Pickup Sports searches for local games histedc by the community in your area. Filter which sports you are interested in, set the location of where you want to play, with a radius to search given in miles.</string>
    <string name="about_title">About Pickup Sports</string>
    <string name="cancel_string">Cancel</string>
    <string name="soccer">Soccer</string>
    <string name="football">Football</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="tennis">Tennis</string>
    <string name="baseball">Baseball</string>
    <string name="basketball">Basketball</string>
    <string name="golf">Golf</string>
    <string name="volleyball">Volleyball</string>
    <string name="event_detail">Event Details</string>
    <string name="event_accept">I\'m There!</string>
    <string name="event_decline">I\'m Not Going!</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="change_user_string">Switch User</string>
    <string name="add_event">Add new Event</string>

</resources>
