<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rosehulman.pickupsports.SearchListActivity" >

    <item
        android:id="@+id/add_new_event_button"
        android:title="@string/add_event"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/add_icon" />
    <item
        android:id="@+id/set_filters"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/set_filters_string" />
    <item
        android:id="@+id/change_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/change_location_string" />
    <item
        android:id="@+id/set_radius"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/set_radius_string" />
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/help_string" />
    <item
        android:id="@+id/profile"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/title_activity_profile" />
    
    <item
        android:id="@+id/user"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/change_user_string" />

</menu>
