<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.rosehulman.pickupsports.CreateEventActivity"
    android:background="@color/profile_background">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/sport_list"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_date"
        android:id="@+id/buttonDate"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_time"
        android:id="@+id/buttonTime"
        android:layout_below="@+id/buttonDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAddress"
        android:layout_below="@+id/buttonTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/edit_text_address" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCity"
        android:layout_below="@+id/editTextAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/edit_text_city" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerState"
        android:entries="@array/spinner_states_list"
        android:prompt="@string/football"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonTime"
        android:layout_alignEnd="@+id/buttonTime"
        android:layout_alignBottom="@+id/editTextZip"
        android:layout_below="@+id/editTextCity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextZip"
        android:layout_below="@+id/editTextCity"
        android:layout_toRightOf="@+id/spinnerState"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/edit_text_zip" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_post"
        android:id="@+id/buttonPost"
        android:layout_below="@+id/spinnerState"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:id="@+id/buttonCancel"
        android:layout_below="@id/buttonPost"
        android:layout_alignLeft="@+id/buttonPost"
        android:layout_alignStart="@+id/buttonPost"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/buttonSetAvail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonTime"
        android:layout_alignRight="@+id/buttonDate"
        android:layout_alignParentRight="true"
        android:text="Set Availability" />
        <Button
        android:id="@+id/buttonSetDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSetAvail"
        android:layout_alignParentRight="true"
        android:text="Set Description" />

</RelativeLayout>
