<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rosehulman.pickupsports.ProfileActivity"
    android:background="@color/profile_background">

    <!-- <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageViewProfile"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="25dp" /> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_name"
        android:id="@+id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="35sp" />
        <!-- android:layout_alignTop="@+id/imageViewProfile"
        android:layout_toRightOf="@+id/imageViewProfile"
        android:layout_toEndOf="@+id/imageViewProfile" --> 

    <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_email"
        android:id="@+id/textViewEmail"
        android:layout_below="@+id/textViewName"
        android:layout_toRightOf="@+id/imageViewProfile"
        android:layout_toEndOf="@+id/imageViewProfile"
        android:paddingTop="25dp"/> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_phone_number"
        android:id="@+id/textViewPhoneNumber"
        android:layout_below="@+id/textViewName"
        android:paddingTop="10dp"
        android:textSize="35sp" />
        <!-- android:layout_alignBottom="@+id/imageViewProfile"
        android:layout_toRightOf="@id/imageViewProfile"
        android:layout_toEndOf="@+id/imageViewProfile"  -->

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:layout_below="@+id/textViewPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/list_background">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/list_tabs_background">

                <!--<TextView
                    android:tag="tab0"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/text_view_tab_friends" />-->

                <TextView
                    android:tag="tab1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/text_view_tab_events"/>
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--<LinearLayout
                    android:id="@+id/tabFriends"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listViewFriends"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>-->

                <LinearLayout
                    android:id="@+id/tabEvents"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listViewEvents"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
